# source

./: .gitignore  package-lock.json  package.json
docs/20260521/: 20260521.ipynb
huggingface/: pyproject.toml
huggingface/data/sample/: restaurant_reviews.csv  reviews_ko.csv  reviews_mixed.csv
huggingface/quiz-gen-app/: .gitignore  README.md  pyproject.toml
huggingface/quiz-gen-app/src/: quiz_gen.py
huggingface/src/: ai-news.py  ai-voice.py  sentiment.py  sentiment_csv.py  vision-text.py
ollama/: agent.ipynb  agent2.ipynb  finder.py  food.py  food.txt  functiongemma-test.ipynb  langchain-vision.ipynb  langchain-vision.py  langchain.ipynb  langchain2.ipynb  langchain3.ipynb  langgraph.json  langgraph1.ipynb  langstudio-test.py  news.py  ollama_lesson.ipynb  ollama_lesson.js  pdf_rag.py  pdf_rag_graph.py  product.py  pyproject.toml  rag_company.py  rag_naver.ipynb  rag_분쟁조정.ipynb
ollama/data/: myData.csv  samsung_dx_ocr.json
pythonsource/: pyproject.toml
pythonsource/basic/: exam1.ipynb  test.py
quantum/: main.py  pyproject.toml  qiskit-implementation.ipynb  quantum-half-adder.ipynb  save-quantum-credential.ipynb
watsonx/: .gitignore  ad.py  app2.py  app3.py  app4.py  app5.py  app6.py  app7.py  app8.py  code_generation.py  image.py  interview.py  main.py  pyproject.toml  summary.py  travel.py  travel2.py  travel3.py  watson.ipynb
