[project]
name = "huggingface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.8",
    "gradio>=6.14.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.2.2",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers[sentencepiece]==4.41.2",
]
