[project]
name = "ollama-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "databricks-langchain>=0.19.0",
    "faiss-cpu>=1.14.2",
    "gradio>=6.14.0",
    "ibm-watsonx-ai>=1.5.12",
    "jedi>=0.20.0",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-ibm>=1.0.11",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langsmith>=0.8.5",
    "lark>=1.3.1",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pdfplumber>=0.11.9",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "youtube-transcript-api>=1.2.4",
]
