[project]
name = "ollama-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.21.1",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.14.2",
    "gradio>=6.14.0",
    "ibm-watsonx-ai>=1.5.12",
    "jedi>=0.20.0",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-ibm>=1.0.11",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langsmith>=0.8.5",
    "lark>=1.3.1",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "youtube-transcript-api>=1.2.4",
]
