[project]
name = "quantum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pylatexenc>=2.10",
    "qiskit>=2.4.1",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.47.0",
    "sympy>=1.14.0",
]
