[project]
name = "quiz-gen-app"
version = "0.1.0"
description = "Reference-based learning quiz generator with Gradio and Qwen."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "beautifulsoup4>=4.14.0",
    "gradio>=6.14.0",
    "pypdf>=6.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "torch>=2.12.0",
    "transformers[sentencepiece]>=4.57.0",
]

[tool.uv]
package = false
